# wato-ASD-assignment

./: watod-config.sh
src/robot/control/: CMakeLists.txt  package.xml
src/robot/control/include/: control_core.hpp  control_node.hpp
src/robot/control/src/: control_core.cpp  control_node.cpp
src/robot/costmap/: CMakeLists.txt  package.xml
src/robot/costmap/config/: params.yaml
src/robot/costmap/include/: costmap_core.hpp  costmap_node.hpp
src/robot/costmap/src/: costmap_node.cpp
src/robot/map_memory/: package.xml
src/robot/map_memory/config/: params.yaml
src/robot/map_memory/include/: map_memory_core.hpp  map_memory_node.hpp
src/robot/map_memory/src/: map_memory_core.cpp  map_memory_node.cpp
src/robot/planner/: CMakeLists.txt  package.xml
src/robot/planner/include/: planner_core.hpp  planner_node.hpp
src/robot/planner/src/: planner_core.cpp  planner_node.cpp
watod_scripts/: watod-setup-dev-env.sh
